--- a/asp/asp/Views/Pessoas/ExcluirPessoa.cshtml
+++ b/asp/asp/Views/Pessoas/ExcluirPessoa.cshtml
@@ -8,11 +8,11 @@
     Layout = "_Layout";
 }
 
-<h2>ExcluirPessoa</h2>
+<h2> </h2>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Voce têm certeza que deseja deletar essa pessoa? </h3>
 <div>
-    <h4>Pessoa</h4>
+   
     <hr />
     <dl class="dl-horizontal">
         <dt>
