--- a/asp/asp/Views/Pessoas/CriarPessoa.cshtml
+++ b/asp/asp/Views/Pessoas/CriarPessoa.cshtml
@@ -26,7 +26,7 @@
             <div class="form-group">
                 <label for="Sobrenome" class="form-label">Sobrenome</label>
                 <input type="text" name="sobrenome" class="form-control" id="Sobrenome" placeholder="Digite um Sobrenome" value="@Model.SobreNome">
-                @Html.ValidationMessageFor(model => model.CPF, "", new { @class = "text-danger" })
+                @Html.ValidationMessageFor(model => model.SobreNome, "", new { @class = "text-danger" })
 
             </div>
             <div class="form-group">
